# usb_dongle_demo

./: .gitignore
demo1/: .gitignore  Makefile  README.md  main.c  skf.h  skf_type.h
demo2/: CMakeLists.txt  base_type.h  main.c  skf.h  skf_type.h
demo3/: demo3.pro  main.c  skf_type.h
demo4/: WinMain.c  demo4.sln  demo4.vcxproj  main.c
download/: README.md
头文件/: skf_type.h
库/win32/usb_ms/动态库/: readme.txt
